# opencode

./: .dockerignore  .env.example  .env.example.mcp  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  FINAL_SECURITY_STATUS.md  README.md  SECURITY_FIXES.md  SECURITY_STATUS.md  cli.py  docker-compose.mcp.yaml  docker-compose.yaml  init_sample_data.py  inspector-config.json  main.py  pyproject.toml  start-neo4j.bat  start-neo4j.sh
config/: __init__.py  settings.py
data/: __init__.py  processor.py  sample_data.py
docker-compose/: README.md
documentation/: ARCHITECTURE.md  CHANGES.md  architecture.drawio  ontology.md  security.md
features/: feature1.md  feature2.md  feature3.md  feature3_implementation_summary.md
graph/: __init__.py  neo4j_client.py  product_manager.py
mcp_server/: README.md  __init__.py  server.py
mcp_server/auth/: __init__.py  jwt_handler.py  middleware.py
mcp_server/config/: __init__.py  mcp_config.py
mcp_server/docker/: Dockerfile.mcp
mcp_server/models/: __init__.py  requests.py  responses.py
mcp_server/resources/: __init__.py  product_resources.py
mcp_server/tests/: __init__.py  test_mcp_server.py
mcp_server/tools/: __init__.py  functionality_tools.py  incident_tools.py  product_tools.py
tests/: __init__.py  conftest.py
tests/integration/: test_feature1.py  test_feature2.py  test_feature3.py  test_integration.py
tests/unit/: test_incident_tools.py  test_main.py  test_neo4j_client.py  test_processor.py  test_product_manager.py  test_settings.py
utils/: __init__.py  exceptions.py  health.py  logging.py  performance.py
